--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-prod": "NODE_ENV=production node ./src/consumer.js",
+    "start-dev": "nodemon ./src/consumer.js",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "Ilham Gibran Achmad Mudzakir",
